--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8010
+server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.application.name=discovery-service
+eureka.client.serviceUrl.defaultZone = http://52.221.211.237:8761/eureka/
 
