--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.application.name=discovery-service
-eureka.client.serviceUrl.defaultZone = http://52.221.211.237:8761/eureka/
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
 
